trunk/Archive2/3e/4e9d42d7ee440a/output
main.cpp:9:22: error: requested alignment is not an integer constant
     alignas(g()) int j;
                      ^
